--- a/resources/lang/de_DE.json
+++ b/resources/lang/de_DE.json
@@ -112,6 +112,7 @@
 "Refresh the page or contact the administrator.": "Aktualisieren Sie die Seite oder wenden Sie sich an den Administrator.",
 "Recevie mails": "Mails erhalten",
 "Revoke": "Widerrufen",
+"See all modules on the map": "Alle Module auf der Karte anzeigen",
 "See the related alerts": "Siehe die zugehörigen Warnungen",
 "See the generated email": "Siehe die generierte E-Mail",
 "Seen": "Gesehen",
@@ -130,6 +131,44 @@
 "Your language preferences have correctly been updated": "Ihre Spracheinstellungen wurden korrekt aktualisiert",
 "Your subscription": "Ihr Abonnement",
 "Value": "Wert",
+
+"========= Client Module Customization =========": "========= Konfiguration von Client-Modulen =========",
+
+"BATTERY_LOW": "Niedriger Batteriestatus",
+"BATTERY_HIGH": "Batterieschub",
+"BATTERY_CRIT_LOW": "Kritisch schwache Batterie",
+"BATTERY_CRIT_HIGH": "KRITISCHE Überspannungsbatterie",
+"NO_BATTERY": "Keine Batterie",
+"BATTERY_DECREASE": "Verringerte Batteriespannung",
+"BATTERY_INCREASE": "Batteriespannungserhöhung",
+"TEMP_DECREASE": "Temperaturabfall",
+"TEMP_INCREASE": "Temperaturanstieg",
+"TEMP_LOW": "Niedrige Temperatur",
+"TEMP_HIGH": "Hohe Temperatur",
+"TEMP_CRIT_LOW": "KRITISCH niedrige Temperatur",
+"TEMP_CRIT_HIGH": "KRITISCH hohe Temperatur",
+"NO_TEMP": "Keine Temperatur",
+"NO_LOG": "Getrennt",
+"Mininimum battery voltage before triggering an alert": "Minimale Batteriespannung vor dem Auslösen eines Alarms",
+"Mininimum battery voltage before triggering a CRITICAL alert": "Minimale Batteriespannung vor dem Auslösen eines KRITISCHEN Alarms",
+"Maximum battery voltage before triggering an alert": "Maximale Batteriespannung vor dem Auslösen eines Alarms",
+"Maximum battery voltage before triggering a CRITICAL alert": "Maximale Batteriespannung vor dem Auslösen eines KRITISCHEN Alarms",
+"Minimum temperature before triggering an alert": "Mindesttemperatur vor dem Auslösen eines Alarms",
+"Minimum temperature before triggering a CRITICAL alert": "Mindesttemperatur vor dem Auslösen eines KRITISCHEN Alarms",
+"Maximum temperature before triggering an alert": "Maximale Temperatur vor dem Auslösen eines Alarms",
+"Maximum temperature before triggering a CRITICAL alert": "Maximale Temperatur vor dem Auslösen eines KRITISCHEN Alarms",
+"Maximum temperature decrease compared to previous data before triggering an alert": "Maximaler Temperaturabfall gegenüber vorherigen Daten vor dem Auslösen eines Alarms",
+"Maximum temperature increase compared to previous data before triggering an alert": "Maximaler Temperaturanstieg gegenüber vorherigen Daten vor dem Auslösen eines Alarms",
+"Maximum battery decrease compared to previous data before triggering an alert": "Maximaler Temperaturabfall gegenüber vorherigen Daten vor dem Auslösen eines Alarms",
+"Maximum battery increase compared to previous data before triggering an alert": "Maximaler Temperaturanstieg gegenüber vorherigen Daten vor dem Auslösen eines Alarms",
+"List of battery values considered incorrect (separate with a comma)": "Liste der als falsch eingestuften Batteriewerte (durch Komma getrennt)",
+"List of temperature values considered incorrect (separate with a comma)": "Liste der als falsch eingestuften Temperaturwerte (durch Komma getrennt)",
+"Minutes without receiving data before triggering an alert": "Minuten ohne Datenempfang, bevor eine Warnung ausgelöst wird",
+"List": "Auflistung",
+"Customize": "Parametrieren",
+"Module thresholds": "Modulschwellenwerte",
+"cannot be superior than ": "kann nicht größer sein als ",
+"cannot be inferior than ": "kann nicht kleiner sein als ",
 
 "========= Datetime =========": "========= Datetime =========",
 
