--- a/resources/lang/es_ES.json
+++ b/resources/lang/es_ES.json
@@ -119,6 +119,7 @@
 "Refresh the page or contact the administrator.": "Actualizar la página o contactar con el administrador.",
 "Receive mails": "Recibir correos",
 "Revoke": "Revocar",
+"See all modules on the map": "Ver todos los módulos en el mapa",
 "See the related alerts": "Ver las alertas relacionadas",
 "See the generated email": "Ver el correo electrónico generado",
 "Seen": "Visto",
@@ -137,6 +138,44 @@
 "Your language preferences have correctly been updated": "Tus preferencias de idioma se han actualizado correctamente.",
 "Your subscription": "Su suscripción",
 "Value": "Valor",
+
+"========= Client Module Customization =========": "========= Configuración de los módulos del cliente =========",
+
+"BATTERY_LOW": "Batería baja",
+"BATTERY_HIGH": "Sobretensión de la batería",
+"BATTERY_CRIT_LOW": "Batería críticamente baja",
+"BATTERY_CRIT_HIGH": "Batería de sobretensión CRÍTICA",
+"NO_BATTERY": "Sin batería",
+"BATTERY_DECREASE": "Voltaje de batería reducido",
+"BATTERY_INCREASE": "Aumento de voltaje de la batería",
+"TEMP_DECREASE": "Disminución de la temperatura",
+"TEMP_INCREASE": "Aumento de temperatura",
+"TEMP_LOW": "Baja temperatura",
+"TEMP_HIGH": "Alta temperatura",
+"TEMP_CRIT_LOW": "CRÍTICAMENTE baja temperatura",
+"TEMP_CRIT_HIGH": "CRÍTICAMENTE alta temperatura",
+"NO_TEMP": "Sin temperatura",
+"NO_LOG": "Desconectado",
+"Mininimum battery voltage before triggering an alert": "Voltaje mínimo de la batería antes de activar una alerta",
+"Mininimum battery voltage before triggering a CRITICAL alert": "Voltaje mínimo de la batería antes de activar una alerta CRÍTICA",
+"Maximum battery voltage before triggering an alert": "Voltaje máximo de la batería antes de activar una alerta",
+"Maximum battery voltage before triggering a CRITICAL alert": "Voltaje máximo de la batería antes de activar una alerta CRÍTICA",
+"Minimum temperature before triggering an alert": "Temperatura mínima antes de disparar una alerta",
+"Minimum temperature before triggering a CRITICAL alert": "Temperatura mínima antes de activar una alerta CRÍTICA",
+"Maximum temperature before triggering an alert": "Temperatura máxima antes de activar una alerta",
+"Maximum temperature before triggering a CRITICAL alert": "Temperatura máxima antes de disparar una alerta CRÍTICA",
+"Maximum temperature decrease compared to previous data before triggering an alert": "Disminución máxima de la temperatura de los datos anteriores antes de activar una alerta",
+"Maximum temperature increase compared to previous data before triggering an alert": "Aumento máximo de temperatura de los datos anteriores antes de activar una alerta",
+"Maximum battery decrease compared to previous data before triggering an alert": "Disminución máxima de la temperatura de los datos anteriores antes de activar una alerta",
+"Maximum battery increase compared to previous data before triggering an alert": "Aumento máximo de temperatura de los datos anteriores antes de activar una alerta",
+"List of battery values considered incorrect (separate with a comma)": "Lista de valores de batería considerados incorrectos (separados por una coma)",
+"List of temperature values considered incorrect (separate with a comma)": "Lista de valores de temperatura considerados incorrectos (separados por una coma)",
+"Minutes without receiving data before triggering an alert": "Minutos sin recibir datos antes de disparar una alerta",
+"List": "Listado",
+"Customize": "Parametrizar",
+"Module thresholds": "Umbrales de módulo",
+"cannot be superior than ": "no puede ser mayor que ",
+"cannot be inferior than ": "no puede ser menor que ",
 
 "========= Datetime =========": "========= Hora =========",
 
