--- a/resources/lang/it_IT.json
+++ b/resources/lang/it_IT.json
@@ -128,6 +128,7 @@
 "Refresh the page or contact the administrator.": "Aggiornare la pagina o contattare l'amministratore.",
 "Revoke": "Revocare",
 "Receive mails": "Ricevere mail",
+"See all modules on the map": "Visualizza tutti i moduli sulla mappa",
 "See the related alerts": "Vedere i relativi avvisi",
 "See the generated email": "Vedere l'e-mail generata",
 "Seen": "Visto",
@@ -146,6 +147,44 @@
 "Your language preferences have correctly been updated": "Le tue preferenze di lingua sono state aggiornate correttamente.",
 "Your subscription": "Il tuo abbonamento",
 "Value": "Valore",
+
+"========= Client Module Customization =========": "========= Configurazione dei moduli client =========",
+
+"BATTERY_LOW": "Batteria scarica",
+"BATTERY_HIGH": "Sovratensione della batteria",
+"BATTERY_CRIT_LOW": "Batteria quasi scarica",
+"BATTERY_CRIT_HIGH": "Batteria da sovratensione CRITICA",
+"NO_BATTERY": "No batteria",
+"BATTERY_DECREASE": "Diminuzione della tensione della batteria",
+"BATTERY_INCREASE": "Aumento della tensione della batteria",
+"TEMP_DECREASE": "Diminuzione della temperatura",
+"TEMP_INCREASE": "Aumento della temperatura",
+"TEMP_LOW": "Bassa temperatura",
+"TEMP_HIGH": "Alta temperatura",
+"TEMP_CRIT_LOW": "CRITICAMENTE bassa temperatura",
+"TEMP_CRIT_HIGH": "CRITICAMENTE alta temperatura",
+"NO_TEMP": "Nessuna temperatura",
+"NO_LOG": "Disconnesso",
+"Mininimum battery voltage before triggering an alert": "Tensione minima della batteria prima di attivare un avviso",
+"Mininimum battery voltage before triggering a CRITICAL alert": "Tensione minima della batteria prima di attivare un avviso CRITICO",
+"Maximum battery voltage before triggering an alert": "Tensione massima della batteria prima di attivare un avviso",
+"Maximum battery voltage before triggering a CRITICAL alert": "Tensione massima della batteria prima di attivare un avviso CRITICO",
+"Minimum temperature before triggering an alert": "Temperatura minima prima di attivare un avviso",
+"Minimum temperature before triggering a CRITICAL alert": "Temperatura minima prima di attivare un avviso CRITICO",
+"Maximum temperature before triggering an alert": "Temperatura massima prima di attivare un avviso",
+"Maximum temperature before triggering a CRITICAL alert": "Temperatura massima prima di attivare un avviso CRITICO",
+"Maximum temperature decrease compared to previous data before triggering an alert": "Diminuzione massima della temperatura rispetto ai dati precedenti prima di attivare un avviso",
+"Maximum temperature increase compared to previous data before triggering an alert": "Aumento massimo della temperatura rispetto ai dati precedenti prima di attivare un avviso",
+"Maximum battery decrease compared to previous data before triggering an alert": "Diminuzione massima della temperatura rispetto ai dati precedenti prima di attivare un avviso",
+"Maximum battery increase compared to previous data before triggering an alert": "Aumento massimo della temperatura rispetto ai dati precedenti prima di attivare un avviso",
+"List of battery values considered incorrect (separate with a comma)": "Elenco dei valori della batteria considerati errati (separati da una virgola)",
+"List of temperature values considered incorrect (separate with a comma)": "Elenco dei valori di temperatura considerati errati (separati da una virgola)",
+"Minutes without receiving data before triggering an alert": "Minuti senza ricevere dati prima di attivare un avviso",
+"List": "Elenco",
+"Customize": "Parametrizza",
+"Module thresholds": "Soglie del modulo",
+"cannot be superior than ": "non può essere maggiore di ",
+"cannot be inferior than ": "non può essere inferiore a ",
 
 "========= Datetime =========": "========= Datetime =========",
 
