--- a/resources/lang/nl_NL.json
+++ b/resources/lang/nl_NL.json
@@ -112,6 +112,7 @@
 "Refresh the page or contact the administrator.": "Vernieuw de pagina of neem contact op met de beheerder.",
 "Receive mails": "Mails ontvangen",
 "Revoke": "Intrekken",
+"See all modules on the map": "Bekijk alle modules op de kaart",
 "See the related alerts": "Zie de gerelateerde waarschuwingen",
 "See the generated email": "Zie de gegenereerde e-mail",
 "Seen": "Gezien",
@@ -130,6 +131,44 @@
 "Your language preferences have correctly been updated": "Uw taalvoorkeuren zijn correct bijgewerkt",
 "Your subscription": "Uw abonnement",
 "Value": "Waarde",
+
+"========= Client Module Customization =========": "========= Configuratie van clientmodules =========",
+
+"BATTERY_LOW": "Lage batterij",
+"BATTERY_HIGH": "Accuspanning",
+"BATTERY_CRIT_LOW": "Kritiek lage batterij",
+"BATTERY_CRIT_HIGH": "KRITIEKE overspanningsbatterij",
+"NO_BATTERY": "Geen batterij",
+"BATTERY_DECREASE": "Verlaagde accuspanning",
+"BATTERY_INCREASE": "Accuspanning verhogen",
+"TEMP_DECREASE": "Verlaging van de temperatuur",
+"TEMP_INCREASE": "Temperatuurstijging",
+"TEMP_LOW": "Lage temperatuur",
+"TEMP_HIGH": "Hoge temperatuur",
+"TEMP_CRIT_LOW": "KRITISCH lage temperatuur",
+"TEMP_CRIT_HIGH": "KRITISCH hoge temperatuur",
+"NO_TEMP": "Geen temperatuur",
+"NO_LOG": "Losgekoppeld",
+"Mininimum battery voltage before triggering an alert": "Minimale batterijspanning voordat een waarschuwing wordt geactiveerd",
+"Mininimum battery voltage before triggering a CRITICAL alert": "Minimale batterijspanning voordat een KRITIEKE waarschuwing wordt geactiveerd",
+"Maximum battery voltage before triggering an alert": "Maximale accuspanning voordat een waarschuwing wordt geactiveerd",
+"Maximum battery voltage before triggering a CRITICAL alert": "Maximale batterijspanning voordat een KRITIEKE waarschuwing wordt geactiveerd",
+"Minimum temperature before triggering an alert": "Minimumtemperatuur voordat een waarschuwing wordt geactiveerd",
+"Minimum temperature before triggering a CRITICAL alert": "Minimumtemperatuur voordat een KRITIEKE waarschuwing wordt geactiveerd",
+"Maximum temperature before triggering an alert": "Maximale temperatuur voordat een waarschuwing wordt geactiveerd",
+"Maximum temperature before triggering a CRITICAL alert": "Maximale temperatuur voordat een KRITIEKE waarschuwing wordt geactiveerd",
+"Maximum temperature decrease compared to previous data before triggering an alert": "Maximale temperatuurdaling ten opzichte van eerdere gegevens voordat een waarschuwing wordt geactiveerd",
+"Maximum temperature increase compared to previous data before triggering an alert": "Maximale temperatuurstijging ten opzichte van eerdere gegevens voordat een waarschuwing wordt geactiveerd",
+"Maximum battery decrease compared to previous data before triggering an alert": "Maximale temperatuurdaling ten opzichte van eerdere gegevens voordat een waarschuwing wordt geactiveerd",
+"Maximum battery increase compared to previous data before triggering an alert": "Maximale temperatuurstijging ten opzichte van eerdere gegevens voordat een waarschuwing wordt geactiveerd",
+"List of battery values considered incorrect (separate with a comma)": "Lijst met batterijwaarden die als onjuist worden beschouwd (gescheiden door een komma)",
+"List of temperature values considered incorrect (separate with a comma)": "Lijst met temperatuurwaarden die als onjuist worden beschouwd (gescheiden door een komma)",
+"Minutes without receiving data before triggering an alert": "Minuten zonder gegevens te ontvangen voordat een waarschuwing wordt geactiveerd",
+"List": "Aanbieding",
+"Customize": "Parameteriseren",
+"Module thresholds": "Module drempels",
+"cannot be superior than ": "kan niet groter zijn dan ",
+"cannot be inferior than ": "kan niet minder zijn dan ",
 
 "========= Datetime =========": "========= Datetime =========",
 
