--- a/resources/lang/fr_FR.json
+++ b/resources/lang/fr_FR.json
@@ -119,6 +119,7 @@
 "Refresh the page or contact the administrator.": "Actualisez la page ou contactez l'administrateur.",
 "Receive mails": "Recevoir des mails",
 "Revoke": "R&eacute;voquer",
+"See all modules on the map": "Voir tous les modules sur la carte",
 "See the related alerts": "Voir les alertes associées",
 "See the generated email": "Voir le mail généré",
 "Seen": "Vu",
@@ -152,16 +153,18 @@
 "BATTERY_LOW": "Batterie faible",
 "BATTERY_HIGH": "Batterie en surtension",
 "BATTERY_CRIT_LOW": "Batterie CRITIQUEMENT faible",
-"BATTERY_CRIT_HIGH": "Batterie en surtension critique",
+"BATTERY_CRIT_HIGH": "Batterie en surtension CRITIQUE",
 "NO_BATTERY": "Pas de batterie",
-"NO_LOG": "Déconnecté",
-"NO_TEMP": "Pas de température",
+"BATTERY_DECREASE": "Diminution de la tension de la batterie",
+"BATTERY_INCREASE": "Augmentat° de la tension de la batterie",
 "TEMP_DECREASE": "Diminution de la température",
 "TEMP_INCREASE": "Augmentation de la température",
-"TEMP_LOW": "Batterie faible",
+"TEMP_LOW": "Température basse",
 "TEMP_HIGH": "Température haute",
 "TEMP_CRIT_LOW": "Température CRITIQUEMENT basse",
 "TEMP_CRIT_HIGH": "Température CRITIQUEMENT haute",
+"NO_TEMP": "Pas de température",
+"NO_LOG": "Déconnecté",
 "Mininimum battery voltage before triggering an alert": "Tension minimale de la batterie avant de déclencher une alerte",
 "Mininimum battery voltage before triggering a CRITICAL alert": "Tension minimale de la batterie avant de déclencher une alerte CRITIQUE",
 "Maximum battery voltage before triggering an alert": "Tension maximale de la batterie avant de déclencher une alerte",
@@ -172,12 +175,16 @@
 "Maximum temperature before triggering a CRITICAL alert": "Température maximale avant de déclencher une alerte CRITIQUE",
 "Maximum temperature decrease compared to previous data before triggering an alert": "Diminution maximale de la température par rapport aux données précédentes avant de déclencher une alerte",
 "Maximum temperature increase compared to previous data before triggering an alert": "Augmentation maximale de la température par rapport aux données précédentes avant de déclencher une alerte",
+"Maximum battery decrease compared to previous data before triggering an alert": "Diminution maximale de la température par rapport aux données précédentes avant de déclencher une alerte",
+"Maximum battery increase compared to previous data before triggering an alert": "Augmentation maximale de la température par rapport aux données précédentes avant de déclencher une alerte",
 "List of battery values considered incorrect (separate with a comma)": "Liste des valeurs de batterie considérées incorrectes (séparées par une virgule)",
 "List of temperature values considered incorrect (separate with a comma)": "Liste des valeurs de température considérées incorrectes (séparées par une virgule)",
 "Minutes without receiving data before triggering an alert": "Minutes sans recevoir de données avant de déclencher une alerte",
 "List": "Liste",
 "Customize": "Paramétrer",
 "Module thresholds": "Seuils du module",
+"cannot be superior than ": "ne peut pas être supérieure à ",
+"cannot be inferior than ": "ne peut pas être inférieure à ",
 
 "========= Datetime =========": "========= Datetime =========",
 
