client date fix

--- a/resources/lang/de_DE.json
+++ b/resources/lang/de_DE.json
@@ -114,6 +114,7 @@
 "Revoke": "Widerrufen",
 "See all modules on the map": "Alle Module auf der Karte anzeigen",
 "See the related alerts": "Siehe die zugehörigen Warnungen",
+"See the related logs": "Siehe die zugehörigen Protokolle",
 "See the generated email": "Siehe die generierte E-Mail",
 "Seen": "Gesehen",
 "Select the language": "Wählen Sie die Sprache",
