--- a/resources/lang/es_ES.json
+++ b/resources/lang/es_ES.json
@@ -121,6 +121,7 @@
 "Revoke": "Revocar",
 "See all modules on the map": "Ver todos los módulos en el mapa",
 "See the related alerts": "Ver las alertas relacionadas",
+"See the related logs": "Ver las registros relacionadas",
 "See the generated email": "Ver el correo electrónico generado",
 "Seen": "Visto",
 "Select the language": "Seleccione el idioma",
