--- a/resources/lang/fr_FR.json
+++ b/resources/lang/fr_FR.json
@@ -121,6 +121,7 @@
 "Revoke": "R&eacute;voquer",
 "See all modules on the map": "Voir tous les modules sur la carte",
 "See the related alerts": "Voir les alertes associées",
+"See the related logs": "Voir les logs associés",
 "See the generated email": "Voir le mail généré",
 "Seen": "Vu",
 "Select the language": "Sélectionnez la langue",
