--- a/resources/lang/it_IT.json
+++ b/resources/lang/it_IT.json
@@ -130,6 +130,7 @@
 "Receive mails": "Ricevere mail",
 "See all modules on the map": "Visualizza tutti i moduli sulla mappa",
 "See the related alerts": "Vedere i relativi avvisi",
+"See the related logs": "Vedere i relativi registri",
 "See the generated email": "Vedere l'e-mail generata",
 "Seen": "Visto",
 "Select the language": "Seleziona la lingua",
