--- a/resources/lang/nl_NL.json
+++ b/resources/lang/nl_NL.json
@@ -114,6 +114,7 @@
 "Revoke": "Intrekken",
 "See all modules on the map": "Bekijk alle modules op de kaart",
 "See the related alerts": "Zie de gerelateerde waarschuwingen",
+"See the related logs": "Zie de gerelateerde logboeken",
 "See the generated email": "Zie de gegenereerde e-mail",
 "Seen": "Gezien",
 "Select the language": "Selecteer de taal",
