added french translation to blog

--- a/resources/lang/fr_FR.json
+++ b/resources/lang/fr_FR.json
@@ -7,13 +7,11 @@
 "Sign out": "Se déconnecter",
 "Log monitoring": "Suivi de logs",
 "Manage my fleet": "Gérer mon parc",
-"New access": "Nouvel accès",
 "New notifications": "Nouvelles notifications",
 "Reconnect": "Se reconnecter",
 "Monitoring of the transfo. fleet": "Suivi du parc transfo.",
 "Unread notifications": "Notifications non lues",
 "The latest data received is displayed. Click this link to refresh the data.": "Les dernières données reçues sont affichées. Cliquez sur ce lien pour rafraîchir les données.",
-"You are taking control of another company. Click here to return to yours": "Vous prenez le contrôle d'une autre entreprise. Cliquez ici pour revenir à la vôtre",
 "You are disconnected": "Vous êtes déconnecté",
 "Disconnected": "Déconnecté",
 
@@ -109,7 +107,6 @@
 "List of modules of your group": "Liste des modules de votre groupe",
 "Modified the": "Modifi&eacute; le",
 "Modify": "Modifier",
-"Modify the colors": "Modifier les couleurs",
 "Number": "Num&eacute;ro",
 "Module": "Module",
 "Modules": "Modules",
@@ -270,10 +267,23 @@
 "Your color choices have been saved.": "Vos choix de couleurs ont bien été sauvegardés.",
 "You do not have the right to view this email.": "Vous n'avez pas le droit de consulter ce mail.",
 "Your image have been saved.": "Votre image a bien été sauvegardée.",
-"Your module :module_name has stopped emitting": "Votre module :module_name a arrêté d'émettre",
-"Your module :module_name has triggered a :alert alert": "Votre module :module_name a déclenché l'alerte :alert",
 
-"========= Generic =========": "========= Générique =========",
+"========= Blog =========": "========= Blog =========",
+
+"Articles editor": "&Eacute;diteur d'articles",
+"Back to admin": "Retour au panneau administrateur",
+"by": "par",
+"Title": "Titre",
+"Desc": "Résumé",
+"Date modified": "Modifié le",
+"Written by": "&Eacute;crit par",
+"ARTICLE": "Article",
+"BUGFIX": "Correction",
+"MAJOR_UPDATE": "Mise à jour majeure",
+"MINOR_UPDATE": "Mise à jour mineure",
+"TUTORIAL": "Tutoriel",
+
+"!======== Generic ========!": "!======== Générique ========!",
 "========= Generic =========": "========= Générique =========",
 
 "A fresh verification link has been sent to your email address.": "Un nouveau lien de vérification a été envoyé à votre adresse email.",
