image upload for blog

--- a/resources/lang/fr_FR.json
+++ b/resources/lang/fr_FR.json
@@ -272,6 +272,7 @@
 
 "Articles editor": "&Eacute;diteur d'articles",
 "Back to admin": "Retour au panneau administrateur",
+"Find PASDT content here. Blog articles, communication, corrections, new features, tutorials.": "Retrouvez les ressources PASDT ici. Articles de blog, communications, corrections, ajouts de fonctionnalité, tutoriels.",
 "by": "par",
 "Title": "Titre",
 "Desc": "Résumé",
