--- a/resources/lang/fr_FR.json
+++ b/resources/lang/fr_FR.json
@@ -14,6 +14,7 @@
 "The latest data received is displayed. Click this link to refresh the data.": "Les dernières données reçues sont affichées. Cliquez sur ce lien pour rafraîchir les données.",
 "You are disconnected": "Vous êtes déconnecté",
 "Disconnected": "Déconnecté",
+"Help": "Aide",
 
 "========= Logs =========": "========= Logs =========",
 
